--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+    "name": "yz518/6083prj",
+    "description": "Backend Rest API for 6083 Project",
     "require": {
         "vlucas/phpdotenv": "^2.4"
     },
