--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,4 @@
-OKTAAUDIENCE=api://default
-OKTAISSUER=
-SCOPE=
-OKTACLIENTID=
-OKTASECRET=
+JWT_SECRET=
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=
