--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "vlucas/phpdotenv": "^2.4",
         "slim/slim": "^4.0",
         "slim/psr7": "*",
-        "tuupola/slim-jwt-auth": "^3.4"
+        "tuupola/slim-jwt-auth": "^3.4",
+        "google/crc32": "^0.1.0"
     },
     "autoload": {
         "psr-4": {
