--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
         "slim/slim": "^4.0",
         "slim/psr7": "*",
         "tuupola/slim-jwt-auth": "^3.4",
-        "google/crc32": "^0.1.0"
+        "google/crc32": "^0.1.0",
+        "php-di/php-di": "^6.1",
+        "php-di/slim-bridge": "^3.0"
     },
     "autoload": {
         "psr-4": {
